# retail_rfid_reader_gateway

./: .gitignore  Jenkinsfile  Makefile.am  README.md  configure.ac
build-aux/: aws-iot.m4
certs/: caa57dffa4.cert.pem  caa57dffa4.private.key  caa57dffa4.public.key
conf/: retail_rfid_reader_gateway.conf
dockers/: Dockerfile  fedora25-x86_64-Dockerfile
scripts/ci/: build.sh  build_docker.sh  test.sh
src/: Makefile.am  retail_rfid_reader_gateway.cpp  retail_rfid_reader_gateway.h
src/aws_iot/: OpenSSLConnection.cpp  OpenSSLConnection.hpp  client.cpp  client.hpp
src/parameters/: .parameters.hpp.swp  options.cpp  options.hpp  parameters.cpp  parameters.hpp
src/rfid_reader/: rs232_data_channel.cpp  rs232_data_channel.hpp
tests/: Makefile.am  retail_rfid_reader_gateway_tests.cpp
tests/aws_iot/: client_mock.cpp  client_mock.hpp  client_tests.cpp
tests/parameters/: options_tests.cpp  parameters_tests.cpp
tests/rfid_reader/: rfid_reader_tests.cpp
